# smart_congrats

./: .gitattributes  .gitignore  AGENTS.md  README.md
.github/: dependabot.yml
.github/workflows/: flutter.yml  rust.yml
apps/smart_congrats_app/: README.md  pubspec.yaml
docs/: architecture.md  dev_setup.md  mvp.md
onchain/: Anchor.toml  Cargo.toml  README.md
onchain/crates/application/: Cargo.toml
onchain/crates/application/src/: lib.rs
onchain/crates/domain/: Cargo.toml
onchain/crates/domain/src/: lib.rs
onchain/programs/smart_congrats/: Cargo.toml
onchain/programs/smart_congrats/src/: lib.rs
onchain/tests/: Cargo.toml
onchain/tests/src/: test_initialize.rs
sdk/: README.md
sdk/crates/application/: Cargo.toml
sdk/crates/application/src/: lib.rs
sdk/crates/domain/: Cargo.toml
sdk/crates/infrastructure/: Cargo.toml
sdk/crates/infrastructure/src/: lib.rs
sdk/crates/presentation/: Cargo.toml
sdk/crates/presentation/src/: lib.rs
